--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
               'slide-in-up': 'slideInUp 1s ease-out forwards',
               'kenburns': 'kenburns 15s ease-out forwards',
               'modal-in': 'modalIn 0.3s ease-out forwards',
-              'slide-in-from-left': 'slideInFromLeft 0.5s ease-out forwards',
-              'slide-in-from-right': 'slideInFromRight 0.5s ease-out forwards',
+              'slide-in-right': 'slideInRight 0.5s ease-out forwards',
             },
             keyframes: {
               fadeIn: {
@@ -49,12 +48,8 @@
                 '0%': { opacity: '0', transform: 'scale(0.95) translateY(10px)' },
                 '100%': { opacity: '1', transform: 'scale(1) translateY(0)' },
               },
-              slideInFromLeft: {
+              slideInRight: {
                   '0%': { opacity: '0', transform: 'translateX(-20px)' },
-                  '100%': { opacity: '1', transform: 'translateX(0)' },
-              },
-              slideInFromRight: {
-                  '0%': { opacity: '0', transform: 'translateX(20px)' },
                   '100%': { opacity: '1', transform: 'translateX(0)' },
               },
             }
@@ -65,6 +60,16 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <script type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
+    </script>
+    <script type="text/javascript">
+      (function(){
+          emailjs.init({
+            publicKey: "2p2xNRMc5EToZpbe3",
+          });
+      })();
+    </script>
   <script type="importmap">
 {
   "imports": {
@@ -75,11 +80,9 @@
   }
 }
 </script>
-<link rel="stylesheet" href="/index.css">
 </head>
   <body class="bg-brand-light font-sans antialiased">
     <div id="root"></div>
     <script type="module" src="/index.jsx"></script>
-  <script type="module" src="/index.tsx"></script>
-</body>
+  </body>
 </html>
