--- a/index.html
+++ b/index.html
@@ -83,6 +83,6 @@
 </head>
   <body class="bg-brand-light font-sans antialiased">
     <div id="root"></div>
-    <script type="module" src="/index.jsx"></script>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
